[package]
name = "dorg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# druid = "0.7"
druid = { git = "https://github.com/linebender/druid.git", features = ["im"] }
toml = "0.5.8"
globwalk = "0.8.1"
log = "0.4.14"
serde = { version = "1.0.136", features = ["derive"]}
anyhow = "1.0.53"
notify = "5.0.0-pre.13"
lazy_static = "1.4.0" 